--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Home/Index.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Home/Index.cshtml
@@ -1,5 +1,16 @@
 ﻿@{
-    ViewBag.Title = "Homepage";
+    ViewBag.Title = "Training provider permissions";
 }
 
-Hello World
+@section breadcrumb {
+    <div>
+        <ol>
+            <li><a href="">Home</a></li>
+            <li><a href="">Training provider permissions</a></li>
+        </ol>
+    </div>
+}
+
+<h1>Training provider permissions</h1>
+<p>Give training providers permission to create cohorts on your behalf.</p>
+<a href="">Choose a training provider</a>
