--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
         <title>@ViewBag.Title - Provider relationships</title>
     </head>
     <body>
+        @RenderSection("breadcrumb", false)
         @RenderBody()
     </body>
 </html>
