Added search training providers page

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Home/Index.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Home/Index.cshtml
@@ -13,4 +13,4 @@
 
 <h1>Training provider permissions</h1>
 <p>Give training providers permission to create cohorts on your behalf.</p>
-<a href="">Choose a training provider</a>
+<a href="@Url.Action("Search", "TrainingProviders")">Choose a training provider</a>
