show whether authenticated

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Home/Index.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Home/Index.cshtml
@@ -1,7 +1,10 @@
-﻿@{
+﻿@model bool
+
+@{
     ViewBag.Title = "Homepage";
 }
 
 Hello World
 
-<a href="@Url.Action("SignOut", "Service")">Sign out</a>
+<p>IsUserAuthenticated=@Model</p>
+<p><a href="@Url.Action("SignOut", "Service")">Sign out</a></p>
