Updated search training providers page copy and validation messages

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/TrainingProviders/Search.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/TrainingProviders/Search.cshtml
@@ -28,6 +28,7 @@
         </label>
         @Html.TextBoxFor(m => m.SearchTrainingProvidersQuery.Ukprn)
     </div>
-    <a href="">What is a UK Provider Reference Number?</a>
+    <h2>What is a UK Provider Reference Number?</h2>
+    <p>A UK Provider Reference Number (UKPRN) is a unique, 8-digit number that identifies a training provider. Your training provider can tell you their UKPRN.</p>
     <button type="submit">Continue</button>
 }
