--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_ValidationSummary.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_ValidationSummary.cshtml
@@ -2,24 +2,31 @@
 
 @if (!Model.IsValid)
 {
-    <div>
-        <ul>
-            @foreach (var modelState in Model)
-            {
-                foreach (var error in modelState.Value.Errors)
+    <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="error-summary">
+        <h2 class="govuk-error-summary__title" id="error-summary-title">
+            There is a problem
+        </h2>
+        <div class="govuk-error-summary__body">
+            <ul class="govuk-list govuk-error-summary__list">
+                @foreach (var modelState in Model)
                 {
-                    <li>
-                        @if (string.IsNullOrWhiteSpace(modelState.Key))
-                        {
-                            @error.ErrorMessage
-                        }
-                        else
-                        {
-                            <a href="#@Html.Id(modelState.Key)">@error.ErrorMessage</a>
-                        }
-                    </li>
+                    foreach (var error in modelState.Value.Errors)
+                    {
+                        <li>
+                            @if (string.IsNullOrWhiteSpace(modelState.Key))
+                            {
+                                @error.ErrorMessage
+                            }
+                            else
+                            {
+                                <a href="#@Html.Id(modelState.Key)">@error.ErrorMessage</a>
+                            }
+                        </li>
+                    }
                 }
-            }
-        </ul>
+            </ul>
+        </div>
     </div>
 }
+
+
