--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Home/Index.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Home/Index.cshtml
@@ -19,6 +19,6 @@
     <div class="govuk-grid-column-full">
         <h1 class="govuk-heading-xl">Training provider permissions</h1>
         <p class="govuk-body">Give training providers permission to create cohorts on your behalf</p>
-        <a href="@Url.Action("Search", "TrainingProviders")" role="button" class="govuk-button govuk-button--start">Choose a training provider</a>
+        <a href="@Url.Action("Search", "Providers")" role="button" class="govuk-button govuk-button--start">Choose a training provider</a>
     </div>
 </div>
