--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/Search.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/Search.cshtml
@@ -1,5 +1,5 @@
 ﻿@using SFA.DAS.Validation.Mvc
-@model SFA.DAS.ProviderRelationships.Web.ViewModels.SearchTrainingProvidersViewModel
+@model SFA.DAS.ProviderRelationships.Web.ViewModels.SearchProvidersViewModel
 
 @{
     ViewBag.Title = "Search for a training provider";
@@ -20,12 +20,12 @@
         {
         @Html.AntiForgeryToken()
 
-        <div class="govuk-form-group @(Html.IsValid(m => m.SearchTrainingProvidersQuery.Ukprn) ? " " : " govuk-form-group--error")">
+        <div class="govuk-form-group @(Html.IsValid(m => m.SearchProvidersQuery.Ukprn) ? " " : " govuk-form-group--error")">
             <span id="dob-error" class="govuk-error-message">
-                @Html.ValidationMessageFor(m => m.SearchTrainingProvidersQuery.Ukprn)
+                @Html.ValidationMessageFor(m => m.SearchProvidersQuery.Ukprn)
             </span>
-            <label for="@Html.IdFor(m => m.SearchTrainingProvidersQuery.Ukprn)" class="govuk-label govuk-!-font-weight-bold" for="name">Uk Provider Reference Number</label>
-            @Html.TextBoxFor(m => m.SearchTrainingProvidersQuery.Ukprn, new { @class = "govuk-input" })
+            <label for="@Html.IdFor(m => m.SearchProvidersQuery.Ukprn)" class="govuk-label govuk-!-font-weight-bold" for="name">Uk Provider Reference Number</label>
+            @Html.TextBoxFor(m => m.SearchProvidersQuery.Ukprn, new { @class = "govuk-input" })
         </div>
 
         <details class="govuk-details">
