Fixed markup indentation

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_ValidationSummary.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_ValidationSummary.cshtml
@@ -2,9 +2,9 @@
 
 @if (!Model.IsValid)
 {
-    <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="error-summary">
+    <div aria-labelledby="error-summary-title" class="govuk-error-summary" data-module="error-summary" role="alert" tabindex="-1">
         <h2 class="govuk-error-summary__title" id="error-summary-title">
-            There is a problem
+            There are errors on this page that need your attention
         </h2>
         <div class="govuk-error-summary__body">
             <ul class="govuk-list govuk-error-summary__list">
