--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Home/Index.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Home/Index.cshtml
@@ -8,17 +8,15 @@
             <li class="govuk-breadcrumbs__list-item">
                 <a class="govuk-breadcrumbs__link" href="#">Home</a>
             </li>
-            <li class="govuk-breadcrumbs__list-item" aria-current="page">Training provider permissions</li>
+            <li aria-current="page" class="govuk-breadcrumbs__list-item">Training provider permissions</li>
         </ol>
     </div>
-
-    <a href="@Url.Action("Index", "Home")" class="govuk-back-link">Back</a>
 }
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <h1 class="govuk-heading-xl">Training provider permissions</h1>
         <p class="govuk-body">Give training providers permission to create cohorts on your behalf</p>
-        <a href="@Url.Action("Search", "Providers")" role="button" class="govuk-button govuk-button--start">Choose a training provider</a>
+        <a class="govuk-button govuk-button--start" href="@Url.Action("Search", "Providers")" role="button">Choose a training provider</a>
     </div>
 </div>
