--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/Search.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/Search.cshtml
@@ -1,16 +1,14 @@
-﻿@using SFA.DAS.Validation.Mvc
-@model SFA.DAS.ProviderRelationships.Web.ViewModels.SearchProvidersViewModel
+﻿@model SearchProvidersViewModel
 
 @{
     ViewBag.Title = "Search for a training provider";
 }
 
 @section breadcrumb {
-<a href="@Url.Action(" Index", "Home" )" class="govuk-back-link">Back</a>
+    <a class="govuk-back-link" href="@Url.Action("Index", "Home" )">Back</a>
 }
 
 @Html.Partial("_ValidationSummary", ViewData.ModelState)
-
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
@@ -18,31 +16,26 @@
         <p class="govuk-body">Add a new training provider via a UKPRN.</p>
         @using (Html.BeginForm())
         {
-        @Html.AntiForgeryToken()
-
-        <div class="govuk-form-group @(Html.IsValid(m => m.SearchProvidersQuery.Ukprn) ? " " : " govuk-form-group--error")">
-            <span id="dob-error" class="govuk-error-message">
-                @Html.ValidationMessageFor(m => m.SearchProvidersQuery.Ukprn)
-            </span>
-            <label for="@Html.IdFor(m => m.SearchProvidersQuery.Ukprn)" class="govuk-label govuk-!-font-weight-bold" for="name">Uk Provider Reference Number</label>
-            @Html.TextBoxFor(m => m.SearchProvidersQuery.Ukprn, new { @class = "govuk-input" })
-        </div>
-
-        <details class="govuk-details">
-            <summary class="govuk-details__summary">
-                <span class="govuk-details__summary-text">
-                    What is a UK Provider Reference Number?
+            @Html.AntiForgeryToken()
+            <div class="govuk-form-group @(Html.IsValid(m => m.SearchProvidersQuery.Ukprn) ? "" : " govuk-form-group--error")">
+                <span class="govuk-error-message" id="dob-error">
+                    @Html.ValidationMessageFor(m => m.SearchProvidersQuery.Ukprn)
                 </span>
-            </summary>
-            <div class="govuk-details__text">
-                <h2>What is a UK Provider Reference Number?</h2>
-                <p>A UK Provider Reference Number (UKPRN) is a unique, 8-digit number that identifies a training provider. Your training provider can tell you their UKPRN.</p>
+                <label class="govuk-label govuk-!-font-weight-bold" for="@Html.IdFor(m => m.SearchProvidersQuery.Ukprn)">UK Provider Reference Number</label>
+                @Html.TextBoxFor(m => m.SearchProvidersQuery.Ukprn, new { @class = "govuk-input" })
             </div>
-        </details>
-        <button type="submit" class="govuk-button">Continue</button>
+            <details class="govuk-details">
+                <summary class="govuk-details__summary">
+                    <span class="govuk-details__summary-text">
+                        What is a UK Provider Reference Number?
+                    </span>
+                </summary>
+                <div class="govuk-details__text">
+                    <h2>What is a UK Provider Reference Number?</h2>
+                    <p>A UK Provider Reference Number (UKPRN) is a unique, 8-digit number that identifies a training provider. Your training provider can tell you their UKPRN.</p>
+                </div>
+            </details>
+            <button class="govuk-button" type="submit">Continue</button>
         }
-    </div>
-    <div class="govuk-grid-column-one-third">
-
     </div>
 </div>
