--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Permissions/Index.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Permissions/Index.cshtml
@@ -17,6 +17,6 @@
     <div class="govuk-grid-column-full">
         <h1 class="govuk-heading-xl">Training provider permissions</h1>
         <p class="govuk-body">Give training providers permission to create cohorts on your behalf</p>
-        <a class="govuk-button govuk-button--start" href="@Url.Action("Search", "Providers")" role="button">Choose a training provider</a>
+        <a class="govuk-button govuk-button--start" href="@Url.Action("SearchProviders", "Permissions")" role="button">Choose a training provider</a>
     </div>
 </div>
