FE Styling for Add Provider page

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Permissions/AddProvider.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Permissions/AddProvider.cshtml
@@ -10,27 +10,41 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-l">Confirm training provider</h1>
-        <p class="govuk-body">UK Provider Reference Number '@Model.Provider.Ukprn' matches:</p>
-        <h2 class="govuk-heading-l">@Model.Provider.Name</h2>
-        <p class="govuk-body-m">UKPRN @Model.Provider.Ukprn</p>
+        <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Confirm training provider</h1>
+        <p class="govuk-body govuk-!-margin-bottom-7">UK Provider Reference Number <span class="govuk-!-font-weight-bold">'@Model.Provider.Ukprn'</span> matches:</p>
+        <h2 class="govuk-heading-xl">
+            @Model.Provider.Name
+            <span class="govuk-caption-l">UKPRN @Model.Provider.Ukprn</span>
+        </h2>
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
             @Html.HiddenFor(m => m.Ukprn)
             <div class="govuk-form-group @(Html.IsValid(m => m.Choice) ? "" : " govuk-form-group--error")">
-                <p>Is this the training provider you would like to set permissions for?</p>
-                <span class="govuk-error-message">
-                    @Html.ValidationMessageFor(m => m.Choice)
-                </span>
-                <label class="govuk-label govuk-!-font-weight-bold">
-                    @Html.RadioButtonFor(m => m.Choice, "Confirm")
-                    Yes, use @Model.Provider.Name
-                </label>
-                <label class="govuk-label govuk-!-font-weight-bold">
-                    @Html.RadioButtonFor(m => m.Choice, "ReEnterUkprn")
-                    No, change UK Provider Reference Number
-                </label>
+                <fieldset class="govuk-fieldset">
+                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+                        <h1 class="govuk-fieldset__heading">
+                            Is this the training provider you would like to set permissions for?
+                        </h1>
+                    </legend>
+                    <span class="govuk-error-message">
+                        @Html.ValidationMessageFor(m => m.Choice)
+                    </span>
+                    <div class="govuk-radios govuk-radios--inline">
+                        <div class="govuk-radios__item">
+                            @Html.RadioButtonFor(m => m.Choice, "Confirm", new { @id = "choice-1", @class = "govuk-radios__input" })
+                            <label class="govuk-label govuk-radios__label" for="choice-1">
+                                Yes, use @Model.Provider.Name
+                            </label>
+                        </div>
+                        <div class="govuk-radios__item">
+                            @Html.RadioButtonFor(m => m.Choice, "ReEnterUkprn", new { @id = "choice-2", @class = "govuk-radios__input" })
+                            <label class="govuk-label govuk-radios__label" for="choice-2">
+                                No, change UK Provider Reference Number
+                            </label>
+                        </div>
+                    </div>
+                </fieldset>
             </div>
             <button class="govuk-button" type="submit">Continue</button>
         }
