from review comments: remove unused 'using' + switch to DependencyResolver.Current

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
-﻿@using SFA.DAS.ProviderRelationships.Web.ViewModels
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html class="govuk-template" lang="en">
     <head>
         <meta charset="utf-8" />
