move email and password link generation into filter (resolves services and calculates links each request: will change to only calc once)

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
@@ -44,8 +44,8 @@
                 </div>
             </div>
             <p><a href="@Url.Action("SignOut", "Service")">Sign out</a></p>
-            <p><a href="@LayoutViewModel.Instance.ChangePasswordLink">Change your password</a></p>
-            <p><a href="@LayoutViewModel.Instance.ChangeEmailLink">Change your email address</a></p>
+            <p><a href="@ViewBag.ChangePasswordLink">Change your password</a></p>
+            <p><a href="@ViewBag.ChangeEmailLink">Change your email address</a></p>
         </header>
         <div class="govuk-width-container">
             <main class="govuk-main-wrapper " id="main-content" role="main">
