Styled up error pages

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/AccessDenied.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/AccessDenied.cshtml
@@ -2,4 +2,9 @@
     ViewBag.Title = "Access denied";
 }
 
-Access denied
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+        <h1 class="govuk-heading-xl">Access denied</h1>
+        <p class="govuk-body">Your account does not have sufficient privileges.</p>
+    </div>
+</div>
