--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/Error.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/Error.cshtml
@@ -2,4 +2,9 @@
     ViewBag.Title = "Error";
 }
 
-Error
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+        <h1 class="govuk-heading-xl">There's been an error</h1>
+        <p class="govuk-body">Sorry, there seems to be an error with this page. Please refresh your browser or <a href="@Url.Action("Index", "Home")">go back to the homepage</a>.</p>
+    </div>
+</div>
