--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/NotFound.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/NotFound.cshtml
@@ -1,5 +1,10 @@
 ﻿@{
-    ViewBag.Title = "Not found";
+    ViewBag.Title = "Page not found";
 }
 
-Not found
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+        <h1 class="govuk-heading-xl">Page not found</h1>
+        <p class="govuk-body">If you entered a web address, check that it's correct. Or you can <a href="@Url.Action("Index", "Home")">return to the homepage</a>.</p>
+    </div>
+</div>
