Commented out employer recruit link for now

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
@@ -87,7 +87,7 @@
                     <ul role="menubar" id="global-nav-links">
                         <li><a href="@Url.EmployerPortalAction()" class="selected" role="menuitem">Home</a></li>
                         <li><a href="@Url.EmployerPortalAccountAction("finance")" role="menuitem">Finance</a></li>
-                        <li><a href="@Url.EmployerRecruitAccountAction()" role="menuitem">Recruit</a></li>
+                        @*<li><a href="@Url.EmployerRecruitAccountAction()" role="menuitem">Recruit</a></li>*@
                         <li><a href="@Url.EmployerCommitmentsAccountAction("apprentices/home")" role="menuitem">Apprentices</a></li>
                         <li><a href="@Url.EmployerAccountsAccountAction("teams/view")" role="menuitem">Your team</a></li>
                         <li><a href="@Url.EmployerAccountsAccountAction("agreements")" role="menuitem">Your organisations and agreements</a></li>
