remove errant quotes

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
@@ -114,7 +114,7 @@
                                 </a>
                             </li>
                             <li class="govuk-footer__inline-list-item">
-                                <a class="govuk-footer__link" href="https://www.surveymonkey.co.uk/r/2JPLQ9T" ">
+                                <a class="govuk-footer__link" href="https://www.surveymonkey.co.uk/r/2JPLQ9T">
                                     Feedback
                                 </a>
                             </li>
