Reworked controller actions based on latest ux

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/Add.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/Add.cshtml
@@ -5,7 +5,7 @@
 }
 
 @section breadcrumb {
-    <a class="govuk-back-link" href="@Url.Action("SearchProviders", "Permissions" )">Back</a>
+    <a class="govuk-back-link" href="@Url.Action("Search", "Providers" )">Back</a>
 }
 
 <div class="govuk-grid-row">
