Updated homepage copy

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Permissions/Index.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Permissions/Index.cshtml
@@ -16,7 +16,7 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <h1 class="govuk-heading-xl">Training provider permissions</h1>
-        <p class="govuk-body">Give training providers permission to create cohorts on your behalf</p>
+        <p class="govuk-body">Set permissions for what you want training providers to do on your behalf. You can select from those you've previously worked with, or find a new one.</p>
         <a class="govuk-button govuk-button--start" href="@Url.Action("SearchProviders", "Permissions")" role="button">Choose a training provider</a>
     </div>
 </div>
