--- a/src/SFA.DAS.ProviderRelationships.Web/Content/css/application.css
+++ b/src/SFA.DAS.ProviderRelationships.Web/Content/css/application.css
@@ -457,3 +457,147 @@ li.menu-link.sub-menu-open ul {
 .govuk-table__cell--center, .govuk-table__header--center {
     text-align: center;
 }
+
+.govuk-success-summary {
+    color: #0b0c0c;
+    padding: 15px;
+    margin-bottom: 30px;
+    border: 4px solid #28a197
+}
+
+@media print {
+    .govuk-success-summary {
+        color: #000
+    }
+}
+
+@media (min-width: 40.0625em) {
+    .govuk-success-summary {
+        padding:20px
+    }
+}
+
+@media (min-width: 40.0625em) {
+    .govuk-success-summary {
+        margin-bottom:50px
+    }
+}
+
+.govuk-success-summary:focus {
+    outline: 3px solid #ffbf47;
+    outline-offset: 0
+}
+
+@media (min-width: 40.0625em) {
+    .govuk-success-summary {
+        border:5px solid #28a197
+    }
+}
+
+.govuk-success-summary__title {
+    font-family: "nta",Arial,sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-weight: 700;
+    font-size: 18px;
+    font-size: 1.125rem;
+    line-height: 1.11111;
+    margin-top: 0;
+    margin-bottom: 15px
+}
+
+@media print {
+    .govuk-success-summary__title {
+        font-family: sans-serif
+    }
+}
+
+@media (min-width: 40.0625em) {
+    .govuk-success-summary__title {
+        font-size:24px;
+        font-size: 1.5rem;
+        line-height: 1.25
+    }
+}
+
+@media print {
+    .govuk-success-summary__title {
+        font-size: 18pt;
+        line-height: 1.15
+    }
+}
+
+@media (min-width: 40.0625em) {
+    .govuk-success-summary__title {
+        margin-bottom:20px
+    }
+}
+
+.govuk-success-summary__body {
+    font-family: "nta",Arial,sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-weight: 400;
+    font-size: 16px;
+    font-size: 1rem;
+    line-height: 1.25
+}
+
+@media print {
+    .govuk-success-summary__body {
+        font-family: sans-serif
+    }
+}
+
+@media (min-width: 40.0625em) {
+    .govuk-success-summary__body {
+        font-size:19px;
+        font-size: 1.1875rem;
+        line-height: 1.31579
+    }
+}
+
+@media print {
+    .govuk-success-summary__body {
+        font-size: 14pt;
+        line-height: 1.15
+    }
+}
+
+.govuk-success-summary__body p {
+    margin-top: 0;
+    margin-bottom: 15px
+}
+
+@media (min-width: 40.0625em) {
+    .govuk-success-summary__body p {
+        margin-bottom:20px
+    }
+}
+
+.govuk-success-summary__list {
+    margin-top: 0;
+    margin-bottom: 0
+}
+
+.govuk-success-summary__list a {
+    font-weight: 700
+}
+
+.govuk-success-summary__list a:focus {
+    outline: 3px solid #ffbf47;
+    outline-offset: 0;
+    background-color: #ffbf47
+}
+
+.govuk-success-summary__list a:link,.govuk-success-summary__list a:visited,.govuk-success-summary__list a:hover,.govuk-success-summary__list a:active {
+    color: #28a197
+}
+
+.govuk-success-summary__list a:focus {
+    color: #0b0c0c
+}
+
+.govuk-\!-text-align-center {
+    text-align: center;
+}
