--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Permissions/SearchProviders.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Permissions/SearchProviders.cshtml
@@ -13,7 +13,7 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">Search for a training provider</h1>
-        <p class="govuk-body">Add a new training provider via a UKPRN.</p>
+        <p class="govuk-body">Search for a training provider via a UKPRN.</p>
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
