Reverted copy change as it was actually correct

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/Add.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/Add.cshtml
@@ -24,7 +24,7 @@
                 <fieldset class="govuk-fieldset">
                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                         <h1 class="govuk-fieldset__heading">
-                            Is this the training provider you would like to add?
+                            Is this the training provider you would like to set permissions for?
                         </h1>
                     </legend>
                     <span class="govuk-error-message">
