Added command and query constructors and removed command and query model binding

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/Add.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/Add.cshtml
@@ -19,7 +19,7 @@
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
-            @Html.HiddenFor(m => m.AddAccountProviderCommand.Ukprn)
+            @Html.HiddenFor(m => m.Ukprn)
             <div class="govuk-form-group @(Html.IsValid(m => m.Choice) ? "" : " govuk-form-group--error")">
                 <fieldset class="govuk-fieldset">
                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
