--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Home/Index.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
 }
 
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
+    <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-xl">Training provider permissions</h1>
         <p class="govuk-body">Set permissions for what you want training providers to do on your behalf. You can select from those you've previously worked with, or find a new one.</p>
         <a class="govuk-button govuk-button--start" href="@Url.Action("Search", "Providers")" role="button">Add a new training provider</a>
