--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/Search.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/Search.cshtml
@@ -12,7 +12,7 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-l">Search for a training provider</h1>
+        <h1 class="govuk-heading-xl">Search for a training provider</h1>
         <p class="govuk-body">Search for a training provider via a UKPRN.</p>
         @using (Html.BeginForm())
         {
