--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Home/Index.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <div class="govuk-breadcrumbs">
         <ol class="govuk-breadcrumbs__list">
             <li class="govuk-breadcrumbs__list-item">
-                <a class="govuk-breadcrumbs__link" href="@Url.EmployerPortalAccountAction()">Home</a>
+                <a class="govuk-breadcrumbs__link" href="@Url.EmployerPortalAccountAction("teams")">Home</a>
             </li>
             <li aria-current="page" class="govuk-breadcrumbs__list-item">Training provider permissions</li>
         </ol>
