--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
@@ -85,7 +85,7 @@
             <div class="header-organisation" role="navigation">
                 <nav class="header-inner">
                     <ul role="menubar" id="global-nav-links">
-                        <li><a href="@Url.EmployerPortalAction()" class="selected" role="menuitem">Home</a></li>
+                        <li><a href="@Url.EmployerPortalAccountAction("teams")" class="selected" role="menuitem">Home</a></li>
                         <li><a href="@Url.EmployerPortalAccountAction("finance")" role="menuitem">Finance</a></li>
                         @*<li><a href="@Url.EmployerRecruitAccountAction()" role="menuitem">Recruit</a></li>*@
                         <li><a href="@Url.EmployerCommitmentsAccountAction("apprentices/home")" role="menuitem">Apprentices</a></li>
